Fixed a bug where I was changing an immutable object